--- a/admin.html
+++ b/admin.html
@@ -39,5 +39,21 @@
         </table>
     </div>
     <script src="./js/main.js"></script>
+    <script>
+        // Kiểm tra theme đã lưu
+        const savedTheme = localStorage.getItem('theme');
+        if (savedTheme) {
+            document.documentElement.setAttribute('data-theme', savedTheme);
+        }
+
+        themeSwitch.addEventListener('click', () => {
+            const currentTheme = document.documentElement.getAttribute('data-theme');
+            const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
+            
+            // Cập nhật theme
+            document.documentElement.setAttribute('data-theme', newTheme);
+            localStorage.setItem('theme', newTheme);
+        });
+</script>
 </body>
 </html>
