--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="Top">
                 <div class="Left">
                     <p>Chào mừng đến với <span style="font-weight: bold;">Chicken Duno</span> – Thiên đường dành cho những tín đồ yêu thích gà!</p>
-                    <p>Tại <span style="font-weight: bold;">Chicken Duno</span>, chúng tôi tự hào mang đến những món ăn từ gà đậm đà hương vị, được chế biến từ những nguyên liệu tươi ngon, đảm bảo chất lượng. Nhà hàng chuyên phục vụ các món gà rán giòn tan, gà nướng thơm lừng, cùng với nhiều món ăn đặc sắc khác từ gà, đáp ứng mọi khẩu vị của bạn.</p>
+                    <p>Tại <span style="font-weight: bold;">Chicken Duno</span>, chúng tôi tự hào mang đến những món ăn từ gà đậm đà hương vị, được chế biến từ những nguyên liệu tươi ngon, đảm bảo chất lượng.</p>
                     <p>Hãy đặt bàn ngay hôm nay để thưởng thức những món ăn hấp dẫn và đậm đà hương vị tại <span style="font-weight: bold;">Chicken Duno</span>!</p>
                     <img src="IMG/MainIMG.jpg" alt="" class="IMG">
                 </div>
