--- a/login.html
+++ b/login.html
@@ -22,6 +22,17 @@
                     <a href="./policy.html">Policy</a>
                 </nav>
             </div>
+
+            <div class="Cart">
+                <a href="./pay.html" class="cart-icon">
+                    <i class="fas fa-shopping-cart"></i>
+                    <span class="cart-count">0</span>
+                </a>
+            </div>
+    
+            <div class="Login">
+                <a href="./login.html" class="LG"> Log In <i class="fas fa-user"></i></a>
+            </div>
         </Header>
         <button class="hamburger">
             <span></span>
