--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
                         <a href="./policy.html">Policy</a>
                     </nav>
                 </div>
+
+                <div class="Cart">
+                    <a href="./pay.html" class="cart-icon">
+                        <i class="fas fa-shopping-cart"></i>
+                        <span class="cart-count">0</span>
+                    </a>
+                </div>
         
                 <div class="Login">
                     <a href="./login.html" class="LG"> Log In <i class="fas fa-user"></i></a>
