--- a/policy.html
+++ b/policy.html
@@ -23,6 +23,13 @@
                         <a href="./policy.html" style="text-decoration: underline; opacity: 1;">Policy</a>
                     </nav>
                 </div>
+
+                <div class="Cart">
+                    <a href="./pay.html" class="cart-icon">
+                        <i class="fas fa-shopping-cart"></i>
+                        <span class="cart-count">0</span>
+                    </a>
+                </div>
         
                 <div class="Login">
                     <a href="./login.html" class="LG"> Log In <i class="fas fa-user"></i></a>
